tests/baselines/reference/aliasesInSystemModule1.errors.txt
aliasesInSystemModule1.ts(1,24): error TS2792: Cannot find module 'foo'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
aliasesInSystemModule1.ts(9,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.


==== aliasesInSystemModule1.ts (2 errors) ====
    import alias = require('foo');
                           ~~~~~
!!! error TS2792: Cannot find module 'foo'. Did you mean to set the 'moduleResolution' option to 'nodenext', or to add aliases to the 'paths' option?
    import cls = alias.Class;
    export import cls2 = alias.Class;
    
    let x = new alias.Class();
    let y = new cls();
    let z = new cls2();
    
    module M {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
      export import cls = alias.Class;
      let x = new alias.Class();
      let y = new cls(); 
      let z = new cls2();
    }
      